<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="search_hint">Search by zipcode or city name</string>
    <string name="app_name">Android3</string>
	<string name="locale_label">Matching locales</string>
	<string name="demo_label">Demographics</string>
	<string name="Zip_label">Zipcode:</string>
	<string name="City_label">City:</string>
	<string name="State_label">State:</string>
	<string name="population_label">Population:</string>
	<string name="housing_label">Housing Units:</string>
	<string name="income_label">Income:</string>
	<string name="landarea_label">Land Area:</string>
	<string name="waterarea_label">Water Area:</string>	
	<string name="military_label">Military Restriction Codes:</string>
	<string name="city_label">City:</string>
	<string name="state_label">State:</string>
	<string name="county_label">County:</string>
	<string name="type_label">Type:</string>
	<string name="preferred_label">Preferred:</string>
	<string name="worldregion_label">World Region:</string>
	<string name="country_label">Country:</string>
	<string name="locationtext_label">Location text:</string>
	<string name="location_label">Location:</string>
	<string name="lat_label">Latitude:</string>
	<string name="long_label">Longitude:</string>
	
</resources>