<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >
    
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="horizontal"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content" >
	    <TextView
	        android:text="@string/population_label"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"/> 
		<TextView
			android:id="@+id/population"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content" />    
	</LinearLayout>
	
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="horizontal"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content" >			
		<TextView
			android:text="@string/housing_label"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"/>
		<TextView
			android:id="@+id/housing"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content" />
	</LinearLayout>
	
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="horizontal"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content" >	
		<TextView
			android:text="@string/income_label"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"/> 
		<TextView
			android:id="@+id/income"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content" />
	</LinearLayout>
	
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="horizontal"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content" >	
		<TextView
			android:text="@string/landarea_label"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"/>
		<TextView
			android:id="@+id/landarea"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content" />
	</LinearLayout>
	
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="horizontal"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content" >	
		<TextView
			android:text="@string/waterarea_label"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />
		<TextView
			android:id="@+id/waterarea"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content" />
	</LinearLayout>
	
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="horizontal"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content" >	
		<TextView
			android:text="@string/military_label"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"/>
		<TextView
			android:id="@+id/military"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content" /> 	 
	</LinearLayout>		
	
</LinearLayout>